@@ -1,47 +1,39 @@
 package com.companieaerienne.controllers;
 
-import com.companieaerienne.entities.VolProgramme;
-import com.companieaerienne.services.VolProgrammeService;
+import com.companieaerienne.entities.VolProgrammation;
+import com.companieaerienne.services.VolProgrammationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.RequestParam;
-import com.companieaerienne.repositories.TrajetRepository;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.servlet.ModelAndView;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
 public class VolProgrammeController {
 
-    private final VolProgrammeService volProgrammeService;
-    private final TrajetRepository trajetRepository;
+    private final VolProgrammationService volProgrammationService;
+    private final com.companieaerienne.repositories.VolProgrammationRepository volProgrammationRepository;
 
     @GetMapping("/volsprogrammes")
-    public ModelAndView listVolsProgrammes(@RequestParam(value = "trajetId", required = false) Integer trajetId) {
-                java.util.List<com.companieaerienne.entities.VolProgramme> source = volProgrammeService.findAll();
-        if (trajetId != null) {
-            source = source.stream().filter(vp -> vp.getTrajet().getId().equals(trajetId)).toList();
-        }
-        List<VolProgrammeInfo> infos = source
-                .stream()
-                .map(vp -> new VolProgrammeInfo(
+    public ModelAndView listVolsProgrammes() {
+        List<VolProgrammation> source = volProgrammationRepository.findAll();
+        List<VolProgrammationInfo> infos = source.stream()
+                .map(vp -> new VolProgrammationInfo(
                         vp,
-                        volProgrammeService.capaciteTotale(vp),
-                        volProgrammeService.siegesReserves(vp)))
-                .collect(Collectors.toList());
+                        volProgrammationService.capaciteTotale(vp),
+                        volProgrammationService.siegesReserves(vp)))
+                .toList();
         ModelAndView mv = new ModelAndView("layout");
         mv.addObject("pageTitle", "Vols programmés");
         mv.addObject("contentView", "/WEB-INF/jsp/volsprogrammes/list.jsp");
         mv.addObject("volsInfos", infos);
-        mv.addObject("trajets", trajetRepository.findAll());
         return mv;
     }
 
     // DTO pour la vue
-    public record VolProgrammeInfo(VolProgramme volProgramme, int capacite, int siegesReserves) {
-        public int siegesRestants() {return capacite - siegesReserves;}
+    public record VolProgrammationInfo(VolProgrammation vp, int capacite, int siegesReserves) {
+        public int restants() {return capacite - siegesReserves;}
     }
 }
